feat: update cluster machines & configs